# flashoptim-jax

./: .gitignore  README.md  flashoptim.tex  pyproject.toml
examples/: benchmark_square_step_all.sh  benchmark_step.py  benchmark_utils.py  example_utils.py  plot_all_benchmarks_3x3.py  plot_benchmark_step_logs.py  plot_reconstruction_error.py  run_benchmark.sh  train_gpt2_pretrain.py  train_imagenet.py  train_mnist.py
examples/torch/: plot_reconstruction_error.py  train_gpt2_all.sh  train_gpt2_pretrain.py  train_imagenet.py
flashoptim_jax/: __init__.py  adamw.py  compression.py  lion.py  momentum_kernel.py  quantization.py  sgd.py  utils.py
flashoptim_torch/: CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
flashoptim_torch/examples/: example_utils.py  train_gpt2_pretrain.py  train_mnist.py
flashoptim_torch/flashoptim/: __init__.py  optimizers.py
flashoptim_torch/test/: conftest.py  reference.py  test_compression.py  test_ddp.py  test_ecc_invariants.py  test_fsdp2.py  test_optimizers.py  test_training.py  test_utils.py
tests/: test_adamw.py  test_checkpointing.py  test_compression.py  test_lion.py  test_optimizer_surface.py  test_quantization.py  test_sgd.py
